Update qa page for the moment - really should fix this in pearweb better

--- a/qa.html
+++ b/qa.html
@@ -94,13 +94,13 @@
 <li><a href="/package/Console_Getargs" title="Console_Getargs">Console_Getargs</a> </li>
 <li><a href="/package/Contact_AddressBook" title="Contact_AddressBook">Contact_AddressBook</a> </li>
 <li><a href="/package/Crypt_RC42" title="Crypt_RC42">Crypt_RC42</a> </li>
-<li><a href="/package/Crypt_RSA" title="Crypt_RSA">Crypt_RSA</a> </li>
 <li><a href="/package/DB_ado" title="DB_ado">DB_ado</a> </li>
 <li><a href="/package/DB_ldap" title="DB_ldap">DB_ldap</a> </li>
 <li><a href="/package/DB_ldap2" title="DB_ldap2">DB_ldap2</a> </li>
 <li><a href="/package/DB_odbtp" title="DB_odbtp">DB_odbtp</a> </li>
 <li><a href="/package/DB_Sqlite_Tools" title="DB_Sqlite_Tools">DB_Sqlite_Tools</a> </li>
 <li><a href="/package/DB_Table" title="DB_Table">DB_Table</a> </li>
+<li><a href="/package/Event_SignalEmitter" title="Event_SignalEmitter">Event_SignalEmitter</a> </li>
 <li><a href="/package/File_DICOM" title="File_DICOM">File_DICOM</a> </li>
 <li><a href="/package/File_DNS" title="File_DNS">File_DNS</a> </li>
 <li><a href="/package/File_Find" title="File_Find">File_Find</a> </li>
@@ -110,7 +110,15 @@
 <li><a href="/package/File_Sitemap" title="File_Sitemap">File_Sitemap</a> </li>
 <li><a href="/package/File_XSPF" title="File_XSPF">File_XSPF</a> </li>
 <li><a href="/package/Games_Chess" title="Games_Chess">Games_Chess</a> </li>
+<li><a href="/package/Gtk2_EntryDialog" title="Gtk2_EntryDialog">Gtk2_EntryDialog</a> </li>
+<li><a href="/package/Gtk2_ExceptionDump" title="Gtk2_ExceptionDump">Gtk2_ExceptionDump</a> </li>
+<li><a href="/package/Gtk2_FileDrop" title="Gtk2_FileDrop">Gtk2_FileDrop</a> </li>
+<li><a href="/package/Gtk2_IndexedComboBox" title="Gtk2_IndexedComboBox">Gtk2_IndexedComboBox</a> </li>
+<li><a href="/package/Gtk2_VarDump" title="Gtk2_VarDump">Gtk2_VarDump</a> </li>
+<li><a href="/package/Gtk_FileDrop" title="Gtk_FileDrop">Gtk_FileDrop</a> </li>
 <li><a href="/package/Gtk_MDB_Designer" title="Gtk_MDB_Designer">Gtk_MDB_Designer</a> </li>
+<li><a href="/package/Gtk_VarDump" title="Gtk_VarDump">Gtk_VarDump</a> </li>
+<li><a href="/package/HTML_Crypt" title="HTML_Crypt">HTML_Crypt</a> </li>
 <li><a href="/package/HTML_CSS" title="HTML_CSS">HTML_CSS</a> </li>
 <li><a href="/package/HTML_Javascript" title="HTML_Javascript">HTML_Javascript</a> </li>
 <li><a href="/package/HTML_Progress2" title="HTML_Progress2">HTML_Progress2</a> </li>
@@ -119,6 +127,7 @@
 <li><a href="/package/HTML_Select" title="HTML_Select">HTML_Select</a> </li>
 <li><a href="/package/HTML_Select_Common" title="HTML_Select_Common">HTML_Select_Common</a> </li>
 <li><a href="/package/HTML_Table_Matrix" title="HTML_Table_Matrix">HTML_Table_Matrix</a> </li>
+<li><a href="/package/HTML_Template_PHPLIB" title="HTML_Template_PHPLIB">HTML_Template_PHPLIB</a> </li>
 <li><a href="/package/HTML_Template_Xipe" title="HTML_Template_Xipe">HTML_Template_Xipe</a> </li>
 <li><a href="/package/HTTP_Header" title="HTTP_Header">HTTP_Header</a> </li>
 <li><a href="/package/HTTP_Server" title="HTTP_Server">HTTP_Server</a> </li>
@@ -152,6 +161,7 @@
 <li><a href="/package/MDB2_Driver_fbsql" title="MDB2_Driver_fbsql">MDB2_Driver_fbsql</a> </li>
 <li><a href="/package/MDB2_TableBrowser" title="MDB2_TableBrowser">MDB2_TableBrowser</a> </li>
 <li><a href="/package/Message" title="Message">Message</a> </li>
+<li><a href="/package/MIME_Type" title="MIME_Type">MIME_Type</a> </li>
 <li><a href="/package/MP3_Playlist" title="MP3_Playlist">MP3_Playlist</a> </li>
 <li><a href="/package/Net_Cyrus" title="Net_Cyrus">Net_Cyrus</a> </li>
 <li><a href="/package/Net_Dict" title="Net_Dict">Net_Dict</a> </li>
@@ -164,11 +174,15 @@
 <li><a href="/package/Net_MPD" title="Net_MPD">Net_MPD</a> </li>
 <li><a href="/package/Net_Ping" title="Net_Ping">Net_Ping</a> </li>
 <li><a href="/package/Net_POP3" title="Net_POP3">Net_POP3</a> </li>
+<li><a href="/package/Net_Server" title="Net_Server">Net_Server</a> </li>
 <li><a href="/package/Net_SMPP_Client" title="Net_SMPP_Client">Net_SMPP_Client</a> </li>
 <li><a href="/package/Net_SMS" title="Net_SMS">Net_SMS</a> </li>
+<li><a href="/package/Net_Wifi" title="Net_Wifi">Net_Wifi</a> </li>
 <li><a href="/package/Numbers_Roman" title="Numbers_Roman">Numbers_Roman</a> </li>
+<li><a href="/package/OpenDocument" title="OpenDocument">OpenDocument</a> </li>
 <li><a href="/package/Payment_PagamentoCerto" title="Payment_PagamentoCerto">Payment_PagamentoCerto</a> </li>
 <li><a href="/package/PEAR_Delegator" title="PEAR_Delegator">PEAR_Delegator</a> </li>
+<li><a href="/package/PEAR_Frontend_Gtk2" title="PEAR_Frontend_Gtk2">PEAR_Frontend_Gtk2</a> </li>
 <li><a href="/package/PEAR_PackageFileManager_Frontend" title="PEAR_PackageFileManager_Frontend">PEAR_PackageFileManager_Frontend</a> </li>
 <li><a href="/package/PEAR_PackageFileManager_Frontend_Web" title="PEAR_PackageFileManager_Frontend_Web">PEAR_PackageFileManager_Frontend_Web</a> </li>
 <li><a href="/package/PEAR_PackageFileManager_GUI_Gtk" title="PEAR_PackageFileManager_GUI_Gtk">PEAR_PackageFileManager_GUI_Gtk</a> </li>
@@ -178,6 +192,7 @@
 <li><a href="/package/PHP_Parser" title="PHP_Parser">PHP_Parser</a> </li>
 <li><a href="/package/PHP_ParserGenerator" title="PHP_ParserGenerator">PHP_ParserGenerator</a> </li>
 <li><a href="/package/PHP_Shell" title="PHP_Shell">PHP_Shell</a> </li>
+<li><a href="/package/QA_Peardoc_Coverage" title="QA_Peardoc_Coverage">QA_Peardoc_Coverage</a> </li>
 <li><a href="/package/RDF" title="RDF">RDF</a> </li>
 <li><a href="/package/RDF_N3" title="RDF_N3">RDF_N3</a> </li>
 <li><a href="/package/RDF_NTriple" title="RDF_NTriple">RDF_NTriple</a> </li>
@@ -185,6 +200,7 @@
 <li><a href="/package/Science_Chemistry" title="Science_Chemistry">Science_Chemistry</a> </li>
 <li><a href="/package/ScriptReorganizer" title="ScriptReorganizer">ScriptReorganizer</a> </li>
 <li><a href="/package/Search_Mnogosearch" title="Search_Mnogosearch">Search_Mnogosearch</a> </li>
+<li><a href="/package/Services_Blogging" title="Services_Blogging">Services_Blogging</a> </li>
 <li><a href="/package/Services_Delicious" title="Services_Delicious">Services_Delicious</a> </li>
 <li><a href="/package/Services_DynDNS" title="Services_DynDNS">Services_DynDNS</a> </li>
 <li><a href="/package/Services_ExchangeRates" title="Services_ExchangeRates">Services_ExchangeRates</a> </li>
@@ -195,10 +211,13 @@
 <li><a href="/package/Stream_Var" title="Stream_Var">Stream_Var</a> </li>
 <li><a href="/package/Structures_Graph" title="Structures_Graph">Structures_Graph</a> </li>
 <li><a href="/package/System_Command" title="System_Command">System_Command</a> </li>
+<li><a href="/package/System_Folders" title="System_Folders">System_Folders</a> </li>
 <li><a href="/package/System_Mount" title="System_Mount">System_Mount</a> </li>
 <li><a href="/package/System_ProcWatch" title="System_ProcWatch">System_ProcWatch</a> </li>
 <li><a href="/package/System_SharedMemory" title="System_SharedMemory">System_SharedMemory</a> </li>
 <li><a href="/package/System_Socket" title="System_Socket">System_Socket</a> </li>
+<li><a href="/package/System_WinDrives" title="System_WinDrives">System_WinDrives</a> </li>
+<li><a href="/package/Text_Highlighter" title="Text_Highlighter">Text_Highlighter</a> </li>
 <li><a href="/package/Text_Huffman" title="Text_Huffman">Text_Huffman</a> </li>
 <li><a href="/package/Text_Statistics" title="Text_Statistics">Text_Statistics</a> </li>
 <li><a href="/package/Text_TeXHyphen" title="Text_TeXHyphen">Text_TeXHyphen</a> </li>
@@ -211,8 +230,12 @@
 <li><a href="/package/Validate_HU" title="Validate_HU">Validate_HU</a> </li>
 <li><a href="/package/Validate_IN" title="Validate_IN">Validate_IN</a> </li>
 <li><a href="/package/Validate_IS" title="Validate_IS">Validate_IS</a> </li>
+<li><a href="/package/Validate_LI" title="Validate_LI">Validate_LI</a> </li>
+<li><a href="/package/Validate_LU" title="Validate_LU">Validate_LU</a> </li>
 <li><a href="/package/Validate_NL" title="Validate_NL">Validate_NL</a> </li>
+<li><a href="/package/Validate_NO" title="Validate_NO">Validate_NO</a> </li>
 <li><a href="/package/Validate_PL" title="Validate_PL">Validate_PL</a> </li>
+<li><a href="/package/Validate_SE" title="Validate_SE">Validate_SE</a> </li>
 <li><a href="/package/Validate_ZA" title="Validate_ZA">Validate_ZA</a> </li>
 <li><a href="/package/XML_CSSML" title="XML_CSSML">XML_CSSML</a> </li>
 <li><a href="/package/XML_FastCreate" title="XML_FastCreate">XML_FastCreate</a> </li>
@@ -239,6 +262,7 @@
 <li><a href="/package/Archive_Zip" title="Archive_Zip">Archive_Zip</a> There is a superseding package: <a href="http://pecl.php.net" title="zip">zip</a></li>
 <li><a href="/package/Crypt_HMAC" title="Crypt_HMAC">Crypt_HMAC</a> There is a superseding package: <a href="/package/Crypt_HMAC2" title="Crypt_HMAC2">Crypt_HMAC2</a></li>
 <li><a href="/package/Crypt_RC4" title="Crypt_RC4">Crypt_RC4</a> There is a superseding package: <a href="/package/Crypt_RC42" title="Crypt_RC42">Crypt_RC42</a></li>
+<li><a href="/package/Crypt_RSA" title="Crypt_RSA">Crypt_RSA</a> There is a superseding package: <a href="http://phpseclib.sourceforge.net" title="Crypt_RSA">Crypt_RSA</a></li>
 <li><a href="/package/DB_Pager" title="DB_Pager">DB_Pager</a> There is a superseding package: <a href="/package/Pager" title="Pager">Pager</a></li>
 <li><a href="/package/HTML_Page" title="HTML_Page">HTML_Page</a> There is a superseding package: <a href="/package/HTML_Page2" title="HTML_Page2">HTML_Page2</a></li>
 <li><a href="/package/HTML_Progress" title="HTML_Progress">HTML_Progress</a> There is a superseding package: <a href="/package/HTML_Progress2" title="HTML_Progress2">HTML_Progress2</a></li>
